# aliopenapi

./: Cargo.toml  README.md
crates/api_derive/: Cargo.toml
crates/api_derive/src/: lib.rs
src/: lib.rs
src/aliapis/: mod.rs  sign.rs
src/aliapis/arms/: list_synthetic_detail.rs  mod.rs
src/aliapis/billing/: describe_instance_bill.rs  get_order_detail.rs  mod.rs  query_account_balance.rs  query_dp_utilization_detail.rs  query_orders.rs  query_resource_package_instances.rs
src/aliapis/dns/: add_domain_record.rs  describe_domain_records.rs  describe_domains.rs  mod.rs  set_domain_record_status.rs
src/aliapis/sls/: get_logs_v2.rs  mod.rs
src/aliapis/sms/: mod.rs  query_send_statistics.rs
