[package]
name = "libaliopenapi"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "crates/api_derive" ]

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
data-encoding = "2.6.0"
dotenv = "0.15.0"
ordermap = "0.5.4"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls","json"] }
ring = "0.17.8"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tracing = { version = "0.1.41"}
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["v4"] }
api_derive = { path = "crates/api_derive" }